update from the gitpod

--- a/src/pages/blog/how-to-take-notes-in-vscode.mdx
+++ b/src/pages/blog/how-to-take-notes-in-vscode.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to take notes in vscode'
+title: 'Giessen-Wetzlar-devs - How to take notes in vscode'
 layout: ../../layouts/BlogLayout.astro
 pubDate: 2022-07-01
 description: 'In this small tutorial i wil show you how i take notes in my vscode editor, is really handy and important when you start your day that you take notes or make a small todo list of all the stuff that need to be done by the end of the day'
